# smartscan-edupad

./: .vercelignore  Dockerfile  README.md  app.py  index.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py
