[tool.poetry]
name = "smartscan-edupad"
version = "1.0.0"
description = "SmartScan EduPad E-Assessment System"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.3.3"
Pillow = "^9.5.0"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
